one circuit resource estimations

--- a/oneCircuitLBMResourceEstimation.ipynb
+++ b/oneCircuitLBMResourceEstimation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "550a4182",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "64b69e15",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "58bdf73c",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "21a5563a",
    "metadata": {},
    "outputs": [],
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "958a586c",
    "metadata": {},
    "outputs": [],
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "50aaa40a",
    "metadata": {},
    "outputs": [],
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "dbac481e",
    "metadata": {
     "scrolled": true
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "0446857e",
    "metadata": {},
    "outputs": [],
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "6a229491",
    "metadata": {
     "scrolled": false
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "cecab507",
    "metadata": {},
    "outputs": [],
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "7de614f3",
    "metadata": {},
    "outputs": [
@@ -442,16 +442,20 @@
       "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: divide by zero encountered in det\n",
       "  r = _umath_linalg.det(a, signature=signature)\n",
       "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: invalid value encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n",
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: divide by zero encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n",
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: invalid value encountered in det\n",
       "  r = _umath_linalg.det(a, signature=signature)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<qiskit.circuit.instructionset.InstructionSet at 0x173ae6f80>"
+       "<qiskit.circuit.instructionset.InstructionSet at 0x162c26500>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "id": "1c2e2a7b",
    "metadata": {},
    "outputs": [],
@@ -479,13 +483,37 @@
     "# select backend\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService, SamplerV2 as Sampler\n",
     "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
+    "from qiskit_ibm_runtime.fake_provider import FakeBrisbane\n",
     "\n",
     "service = QiskitRuntimeService()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
+   "id": "6b77c6e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "backend = FakeBrisbane()\n",
+    "pm = generate_preset_pass_manager(backend=backend, optimization_level = 3)\n",
+    "qc_opt = pm.run(qc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6630ef79",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"Transpiled QLBM circuit depth on IBM Brisbane: {qc_opt.depth()}\")\n",
+    "print(f\"Transpiled QLBM circuit ops on IBM Brisbane: {qc_opt.count_ops()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "86276d54",
    "metadata": {},
    "outputs": [
@@ -514,65 +542,15 @@
     }
    ],
    "source": [
-    "# least busy backend we have access to\n",
-    "backend = service.least_busy(simulator=False, operational=True)\n",
-    "print(backend)\n",
-    "pm = generate_preset_pass_manager(backend=backend, optimization_level=1)\n",
-    "isa_circuit = pm.run(qc)\n",
-    "print(\"Pass manager done\")\n",
-    "sampler = Sampler(backend)\n",
-    "job = sampler.run([isa_circuit])\n",
-    "print(job.usage_estimation)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fcbe5d26",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: divide by zero encountered in det\n",
-      "  r = _umath_linalg.det(a, signature=signature)\n",
-      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: invalid value encountered in det\n",
-      "  r = _umath_linalg.det(a, signature=signature)\n",
-      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: divide by zero encountered in det\n",
-      "  r = _umath_linalg.det(a, signature=signature)\n",
-      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: invalid value encountered in det\n",
-      "  r = _umath_linalg.det(a, signature=signature)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# # # get the circuits\n",
-    "# # v, s = allvorts[-1].flatten(), allstreams[-1].flatten()\n",
-    "# # SV = reinit(v,s)\n",
-    "# # part1, part2 = createCirc(s)\n",
-    "\n",
-    "\n",
-    "\n",
-    "# for i in range(timesteps):\n",
-    "#     print(i)\n",
-    "#     v, s = allvorts[-1].flatten(), allstreams[-1].flatten()\n",
-    "#     SV = reinit(v,s)\n",
-    "#     part1, part2 = createCirc(s)\n",
-    "    \n",
-    "#     SV = SV.evolve(part1)\n",
-    "#     SVarr = np.array(SV)\n",
-    "#     SVarr = np.real(SVarr)\n",
-    "#     SV = Statevector(SVarr)\n",
-    "#     SV = SV.evolve(part2)\n",
-    "#     SVarr = np.array(SV)\n",
-    "    \n",
-    "#     v, s = np.reshape(np.real(2**2.5*SVarr[:M**2]),(M,M)), np.reshape(np.real(2**2.5*SVarr[M**2:2*M**2]),(M,M))\n",
-    "    \n",
-    "#     allvorts.append(v.copy())\n",
-    "#     allstreams.append(s.copy())\n",
-    "#     np.savetxt('oneCirc/stream'+str(i+1)+'.csv', allstreams[-1], delimiter=',')\n",
-    "#     np.savetxt('oneCirc/vort'+str(i+1)+'.csv', allvorts[-1], delimiter=',')"
+    "# # least busy backend we have access to\n",
+    "# backend = service.least_busy(simulator=False, operational=True)\n",
+    "# print(backend)\n",
+    "# pm = generate_preset_pass_manager(backend=backend, optimization_level=1)\n",
+    "# isa_circuit = pm.run(qc)\n",
+    "# print(\"Pass manager done\")\n",
+    "# sampler = Sampler(backend)\n",
+    "# job = sampler.run([isa_circuit])\n",
+    "# print(job.usage_estimation)"
    ]
   }
  ],
