--- a/TwoCircuitLBMBoundsResourceEstimation.ipynb
+++ b/TwoCircuitLBMBoundsResourceEstimation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "id": "d347141b",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "id": "28667bd2",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "d40d1409",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "ef1d969d",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "id": "8299c09f",
    "metadata": {},
    "outputs": [],
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "818ae260",
    "metadata": {},
    "outputs": [],
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "id": "8ddb8ade",
    "metadata": {
     "scrolled": false
@@ -169,6 +169,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: divide by zero encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n",
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: invalid value encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n",
       "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: divide by zero encountered in det\n",
       "  r = _umath_linalg.det(a, signature=signature)\n",
       "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: invalid value encountered in det\n",
@@ -452,7 +456,7 @@
        "«                   ░       ░       "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -527,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "id": "863e64b6",
    "metadata": {},
    "outputs": [],
@@ -563,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "id": "b5bf637d",
    "metadata": {},
    "outputs": [
@@ -682,7 +686,7 @@
        "«       ░        ░                        "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -777,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "id": "a0417529",
    "metadata": {},
    "outputs": [],
@@ -794,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "id": "31906c22",
    "metadata": {},
    "outputs": [],
@@ -827,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "id": "5eb86621",
    "metadata": {},
    "outputs": [],
@@ -846,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "id": "fc1e0bd3",
    "metadata": {},
    "outputs": [],
@@ -854,13 +858,14 @@
     "# select backend\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService, SamplerV2 as Sampler\n",
     "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
+    "from qiskit_ibm_runtime.fake_provider import FakeBrisbane\n",
     "\n",
-    "service = QiskitRuntimeService()"
+    "service = QiskitRuntimeService()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "id": "52a517d3",
    "metadata": {},
    "outputs": [
@@ -868,9 +873,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<IBMBackend('ibm_brisbane')>\n",
-      "Pass manager done\n",
-      "{'quantum_seconds': 73.54269496363062}\n"
+      "<qiskit_ibm_runtime.fake_provider.backends.brisbane.fake_brisbane.FakeBrisbane object at 0x14bc699d0>\n"
      ]
     }
    ],
@@ -878,89 +881,83 @@
     "# STREAM CIRCUIT WITH BOUNDS\n",
     "# least busy backend we have access to\n",
     "sCirc = streamCirc()\n",
-    "backend = service.least_busy(simulator=False, operational=True)\n",
+    "backend = FakeBrisbane()\n",
     "print(backend)\n",
-    "pm = generate_preset_pass_manager(backend=backend, optimization_level=1)\n",
-    "isa_circuit = pm.run(sCirc)\n",
-    "print(\"Pass manager done\")\n",
-    "sampler = Sampler(backend)\n",
-    "job = sampler.run([isa_circuit])\n",
-    "print(job.usage_estimation)"
+    "pm = generate_preset_pass_manager(backend=backend, optimization_level=3)\n",
+    "sCirc_opt = pm.run(sCirc)\n",
+    "# print(\"Pass manager done\")\n",
+    "# sampler = Sampler(backend)\n",
+    "# job = sampler.run([isa_circuit])\n",
+    "# print(job.usage_estimation)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "id": "c51dfc8e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: divide by zero encountered in det\n",
-      "  r = _umath_linalg.det(a, signature=signature)\n",
-      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: invalid value encountered in det\n",
-      "  r = _umath_linalg.det(a, signature=signature)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<IBMBackend('ibm_brisbane')>\n",
-      "Pass manager done\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/qiskit_ibm_runtime/utils/validations.py:40: UserWarning: The 0-th circuit has no output classical registers so the result will be empty. Did you mean to add measurement instructions?\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'quantum_seconds': 61.560942397004005}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# VORTICITY CIRCUIT WITH BOUNDS\n",
     "# least busy backend we have access to\n",
     "vCirc = vortCirc(streamfunction)\n",
-    "backend = service.least_busy(simulator=False, operational=True)\n",
-    "print(backend)\n",
-    "pm = generate_preset_pass_manager(backend=backend, optimization_level=1)\n",
-    "isa_circuit = pm.run(vCirc)\n",
-    "print(\"Pass manager done\")\n",
-    "sampler = Sampler(backend)\n",
-    "job = sampler.run([isa_circuit])\n",
-    "print(job.usage_estimation)"
+    "backend = FakeBrisbane()\n",
+    "pm = generate_preset_pass_manager(backend=backend, optimization_level=3)\n",
+    "vCirc_opt = pm.run(vCirc)\n",
+    "# print(\"Pass manager done\")\n",
+    "# sampler = Sampler(backend)\n",
+    "# job = sampler.run([isa_circuit])\n",
+    "# print(job.usage_estimation)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6d2ff040",
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
+   "execution_count": 17,
+   "id": "f43780ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Transpiled stream circuit w/ bounds depth on IBM Brisbane: 286995\n",
+      "Transpiled vorticity circuit w/ bounds depth on IBM Brisbane: 804078\n",
+      "\n",
+      "Transpiled stream circuit ops w/ bounds on IBM Brisbane: OrderedDict({'rz': 246986, 'sx': 149665, 'ecr': 75640, 'x': 8915, 'barrier': 3})\n",
+      "Transpiled vorticity circuit ops w/ bounds on IBM Brisbane: OrderedDict({'rz': 701937, 'sx': 421462, 'ecr': 208688, 'x': 29926, 'barrier': 4})\n"
+     ]
+    }
+   ],
    "source": [
-    "# steps = 10\n",
-    "# for i in range(steps + 1):\n",
-    "#     print(i)\n",
-    "#     streamfunction, vorticity = allstreams[-1], allvorts[-1]\n",
-    "#     x = Stimestep(streamfunction,vorticity)\n",
-    "#     y = Vtimestep(vorticity, streamfunction)\n",
-    "#     allstreams.append(np.real(x)*2**(4/2))\n",
-    "#     allvorts.append(np.real(y)*2**(4/2))\n",
-    "# #     if i%2 == 0:\n",
-    "# #         graphC(allstreams[i],i,5)"
+    "print(f\"Transpiled stream circuit w/ bounds depth on IBM Brisbane: {sCirc_opt.depth()}\")\n",
+    "print(f\"Transpiled vorticity circuit w/ bounds depth on IBM Brisbane: {vCirc_opt.depth()}\")\n",
+    "print()\n",
+    "print(f\"Transpiled stream circuit ops w/ bounds on IBM Brisbane: {sCirc_opt.count_ops()}\")\n",
+    "print(f\"Transpiled vorticity circuit ops w/ bounds on IBM Brisbane: {vCirc_opt.count_ops()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "bc08cd2e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Transpiled stream circuit physical runtime = 52241.26 micro seconds\n",
+      "Transpiled vorticity circuit physical runtime = 137028.30 micro seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "from qiskit import schedule\n",
+    "\n",
+    "sCirc_sched = schedule(sCirc_opt, backend)\n",
+    "print(\"Transpiled stream circuit physical runtime = {:.2f} micro seconds\".format(sCirc_sched.duration*backend.dt*1e6))\n",
+    "vCirc_sched = schedule(vCirc_opt, backend)\n",
+    "print(\"Transpiled vorticity circuit physical runtime = {:.2f} micro seconds\".format(vCirc_sched.duration*backend.dt*1e6))"
    ]
   }
  ],
