--- a/oneCircuitLBMResourceEstimation.ipynb
+++ b/oneCircuitLBMResourceEstimation.ipynb
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "6b77c6e5",
    "metadata": {},
    "outputs": [],
@@ -502,45 +502,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "6630ef79",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(f\"Transpiled QLBM circuit depth on IBM Brisbane: {qc_opt.depth()}\")\n",
-    "print(f\"Transpiled QLBM circuit ops on IBM Brisbane: {qc_opt.count_ops()}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "86276d54",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<IBMBackend('ibm_brisbane')>\n",
-      "Pass manager done\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/qiskit_ibm_runtime/utils/validations.py:40: UserWarning: The 0-th circuit has no output classical registers so the result will be empty. Did you mean to add measurement instructions?\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'quantum_seconds': 61.560942397004005}\n"
+      "Transpiled QLBM circuit depth on IBM Brisbane: 1352242\n",
+      "Transpiled QLBM circuit ops on IBM Brisbane: OrderedDict({'rz': 1388645, 'sx': 887232, 'ecr': 428510, 'x': 42619, 'barrier': 6})\n",
+      "Transpiled QLBM circuit physical runtime = 227162.70 micro seconds\n"
      ]
     }
    ],
+   "source": [
+    "print(f\"Transpiled QLBM circuit depth on IBM Brisbane: {qc_opt.depth()}\")\n",
+    "print(f\"Transpiled QLBM circuit ops on IBM Brisbane: {qc_opt.count_ops()}\")\n",
+    "from qiskit import schedule\n",
+    "\n",
+    "sched = schedule(qc_opt, backend)\n",
+    "print(\"Transpiled QLBM circuit physical runtime = {:.2f} micro seconds\".format(sched.duration*backend.dt*1e6))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "86276d54",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# # least busy backend we have access to\n",
     "# backend = service.least_busy(simulator=False, operational=True)\n",
@@ -550,7 +540,8 @@
     "# print(\"Pass manager done\")\n",
     "# sampler = Sampler(backend)\n",
     "# job = sampler.run([isa_circuit])\n",
-    "# print(job.usage_estimation)"
+    "# print(job.usage_estimation)\n",
+    "# # NOTE: this experiment was scratched due to job vs. circuit estimation"
    ]
   }
  ],
