--- a/twoCircuitLBMResourceEstimation.ipynb
+++ b/twoCircuitLBMResourceEstimation.ipynb
@@ -492,7 +492,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Transpiled stream circuit physical runtime = 49593.96 micro seconds\n"
+      "Transpiled stream circuit physical runtime = 49593.96 micro seconds\n",
+      "Transpiled stream circuit physical runtime = 28423.60 micro seconds\n"
      ]
     }
    ],
@@ -502,16 +503,8 @@
     "sCirc_sched = schedule(sCirc_opt, backend)\n",
     "print(\"Transpiled stream circuit physical runtime = {:.2f} micro seconds\".format(sCirc_sched.duration*backend.dt*1e6))\n",
     "vCirc_sched = schedule(vCirc_opt, backend)\n",
-    "print(\"Transpiled stream circuit physical runtime = {:.2f} micro seconds\".format(vCirc_sched.duration*backend.dt*1e6))"
+    "print(\"Transpiled vorticity circuit physical runtime = {:.2f} micro seconds\".format(vCirc_sched.duration*backend.dt*1e6))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4cb05ee9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
