One circuit gate count results

--- a/oneCircuitLBMECRCounts.ipynb
+++ b/oneCircuitLBMECRCounts.ipynb
@@ -2,22 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "550a4182",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'qiskit_aer'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 16\u001b[0m\n\u001b[1;32m     13\u001b[0m get_ipython()\u001b[38;5;241m.\u001b[39mrun_line_magic(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmatplotlib\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124minline\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     14\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mqiskit\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m transpile\n\u001b[0;32m---> 16\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mqiskit_aer\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m AerSimulator\n\u001b[1;32m     18\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtime\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'qiskit_aer'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import qiskit as q\n",
@@ -42,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "58bdf73c",
    "metadata": {},
    "outputs": [],
@@ -68,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "21a5563a",
    "metadata": {},
    "outputs": [],
@@ -112,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "958a586c",
    "metadata": {},
    "outputs": [],
@@ -131,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "50aaa40a",
    "metadata": {},
    "outputs": [],
@@ -148,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "dbac481e",
    "metadata": {
     "scrolled": true
@@ -166,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "0446857e",
    "metadata": {},
    "outputs": [],
@@ -186,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "6a229491",
    "metadata": {
     "scrolled": false
@@ -402,9 +390,9 @@
     "    CB = CB.to_gate(label='CB')\n",
     "\n",
     "    # GENERALIZED\n",
-    "    cb_qubits = [10] + list(range(2*log_M + 1))\n",
+    "    cb_qubits = [n - 3] + list(range(2*log_M + 1))\n",
     "    setup2.barrier()\n",
-    "    setup2.append(CB.control(ctrl_state = 0),[10,0,1,2,3,4,5,6,7,8])\n",
+    "    setup2.append(CB.control(ctrl_state = 0),cb_qubits)\n",
     "    setup2.barrier()\n",
     "\n",
     "    # GENERALIZED\n",
@@ -418,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "cecab507",
    "metadata": {},
    "outputs": [],
@@ -439,88 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "464da367",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# min = 1\n",
-    "# max = 7\n",
-    "\n",
-    "# outpath = \"data/twoCircuitECRCounts.txt\"\n",
-    "\n",
-    "# for i in range(min, max + 1):\n",
-    "#     print(i)\n",
-    "#     # set parameters\n",
-    "#     M = int(math.pow(2, i)) # lattices\n",
-    "\n",
-    "#     dim = 2\n",
-    "#     dirs = 5\n",
-    "\n",
-    "#     nlat = int(np.ceil(np.log2(M)))\n",
-    "#     nlinks = int(np.ceil(np.log2(dirs)))\n",
-    "\n",
-    "#     n = nlinks+dim*nlat+1\n",
-    "\n",
-    "#     vorticity = np.zeros((M,M))\n",
-    "#     streamfunction = np.zeros((M,M))\n",
-    "\n",
-    "#     w = (2/6,1/6,1/6,1/6,1/6)\n",
-    "#     e = (0,-1,1,1,-1) \n",
-    "#     cs = np.sqrt(3)   ##speed of sound \n",
-    "#     U = 1\n",
-    "#     lambdas = [np.arccos(i) for i in w] #streamfunction lambdas, can use adv-dif\n",
-    "\n",
-    "#     # setup \n",
-    "#     allstreams = []\n",
-    "#     allvorts = []\n",
-    "#     # steps = 200\n",
-    "#     streamfunction = np.zeros((M,M))\n",
-    "#     vorticity = np.zeros((M,M))\n",
-    "#     allstreams.append(streamfunction)\n",
-    "#     allvorts.append(vorticity)\n",
-    "\n",
-    "#     streamfunction, vorticity = allstreams[-1], allvorts[-1]\n",
-    "\n",
-    "#     backend = FakeBrisbane()\n",
-    "\n",
-    "#     # stream function\n",
-    "#     print(\"STREAM FUNCTION\")\n",
-    "#     sCirc = streamCirc()\n",
-    "#     pm = generate_preset_pass_manager(backend=backend, optimization_level=3)\n",
-    "#     sCirc_opt = pm.run(sCirc)\n",
-    "\n",
-    "#     # vorticity function\n",
-    "#     print(\"VORTICITY\")\n",
-    "#     vCirc = vortCirc(streamfunction)\n",
-    "#     pm = generate_preset_pass_manager(backend=backend, optimization_level=3)\n",
-    "#     vCirc_opt = pm.run(vCirc)\n",
-    "\n",
-    "#     # schedule\n",
-    "#     print(\"SCHEDULE\")\n",
-    "#     sCirc_sched = schedule(sCirc_opt, backend)\n",
-    "#     vCirc_sched = schedule(vCirc_opt, backend)\n",
-    "\n",
-    "#     # results\n",
-    "\n",
-    "#     with open(outpath, \"a\") as f:\n",
-    "#         f.write(f\"OUTPUT FOR: 2^{i}\\n\")\n",
-    "#         f.write(f\"Transpiled stream circuit depth on IBM Brisbane: {sCirc_opt.depth()}\\n\")\n",
-    "#         f.write(f\"Transpiled vorticity circuit depth on IBM Brisbane: {vCirc_opt.depth()}\\n\")\n",
-    "#         f.write(\"\\n\")\n",
-    "\n",
-    "#         f.write(f\"Transpiled stream circuit ops on IBM Brisbane: {sCirc_opt.count_ops()}\\n\")\n",
-    "#         f.write(f\"Transpiled vorticity circuit ops on IBM Brisbane: {vCirc_opt.count_ops()}\\n\")\n",
-    "#         f.write(\"\\n\")\n",
-    "#         f.write(\"Transpiled stream circuit physical runtime = {:.2f} micro seconds\\n\".format(sCirc_sched.duration*backend.dt*1e6))\n",
-    "#         f.write(\"Transpiled vorticity circuit physical runtime = {:.2f} micro seconds\\n\".format(vCirc_sched.duration*backend.dt*1e6))\n",
-    "\n",
-    "#         f.write(\"\\n\\n\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "961992e0",
    "metadata": {},
    "outputs": [],
@@ -539,39 +446,53 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c241089",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "M = math.pow(2, i) # lattices\n",
-    "\n",
-    "dim = 2\n",
-    "dirs = 5\n",
-    "\n",
-    "nlat = int(np.ceil(np.log2(M)))\n",
-    "nlinks = int(np.ceil(np.log2(dirs)))\n",
-    "#center, right, left, up, down\n",
-    "wts = (2/6,1/6,1/6,1/6,1/6)\n",
-    "e = (0,-1,1,-1,1) \n",
-    "cs = np.sqrt(3) \n",
-    "U = 1 #velocity of moving wall for cavity flow    \n",
-    "\n",
-    "n = nlat+nlat+nlinks+1+1 # number qubits\n",
-    "\n",
-    "allvorts = [np.zeros((M,M))]\n",
-    "allstreams = [np.zeros((M,M))]\n",
-    "\n",
-    "v, s = allvorts[-1].flatten(), allstreams[-1].flatten()\n",
-    "\n",
-    "part1, part2 = createCirc(s)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "772842ae",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: divide by zero encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n",
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: invalid value encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: divide by zero encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n",
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: invalid value encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "min = 1\n",
     "max = 5\n",
@@ -579,9 +500,10 @@
     "path = \"data/oneCircuitECRCounts.txt\"\n",
     "\n",
     "for i in range(min, max + 1):\n",
+    "    print(i)\n",
     "    #parameters\n",
     "\n",
-    "    M = math.pow(2, i) # lattices\n",
+    "    M = int(math.pow(2, i)) # lattices\n",
     "\n",
     "    dim = 2\n",
     "    dirs = 5\n",
