run corrected python file

--- a/parallelization/twoCircuitLBMECRCounts.ipynb
+++ b/parallelization/twoCircuitLBMECRCounts.ipynb
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": null,
    "id": "8ddb8ade",
    "metadata": {
     "scrolled": false
@@ -141,8 +141,8 @@
     "    for i in range(dirs):\n",
     "        setup.append(createLambda(i,True).to_gate(label = 'Lambda'+str(i)).control(1,ctrl_state = 0),cb)\n",
     "\n",
-    "    for i in range(dirs):\n",
-    "        setup.append(createLambda(i,True).to_gate(label = 'Lambda'+str(i)).control(1,ctrl_state = 0),cb)\n",
+    "    # for i in range(dirs):\n",
+    "    #     setup.append(createLambda(i,True).to_gate(label = 'Lambda'+str(i)).control(1,ctrl_state = 0),cb)\n",
     "    for i in range(8,13):\n",
     "        setup.append(createLambda(i,True).to_gate(label = 'Lambda'+str(i)).control(1,ctrl_state = 0),cb)\n",
     "    for i in range(dirs):\n",
