resource estimation data

--- a/data/timingAnalysis.ipynb
+++ b/data/timingAnalysis.ipynb
@@ -8,7 +8,9 @@
    "source": [
     "import numpy as np \n",
     "import matplotlib.pyplot as plt\n",
-    "import pickle as pkl"
+    "import pickle as pkl\n",
+    "\n",
+    "from collections import OrderedDict"
    ]
   },
   {
@@ -104,6 +106,106 @@
    ],
    "source": [
     "plt.scatter(x, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = {\n",
+    "    1: {\n",
+    "        \"streamfunction\": {\n",
+    "            \"depth\": 230005,\n",
+    "            \"count_ops\": OrderedDict({'rz': 191002, 'sx': 118794, 'ecr': 58545, 'x': 7906, 'barrier': 2}),\n",
+    "            \"runtime\": 41343.72\n",
+    "        },\n",
+    "        \"vorticity\": {\n",
+    "            \"depth\": 2665,\n",
+    "            \"count_ops\": OrderedDict({'rz': 2448, 'sx': 1524, 'ecr': 672, 'x': 67, 'barrier': 2}),\n",
+    "            \"runtime\": 438.90\n",
+    "        }\n",
+    "    },\n",
+    "    2: {\n",
+    "        \"streamfunction\": {\n",
+    "            \"depth\": 243486,\n",
+    "            \"count_ops\": OrderedDict({'rz': 196284, 'sx': 119611, 'ecr': 59180, 'x': 7655, 'barrier': 2}),\n",
+    "            \"runtime\": 41958.54\n",
+    "        },\n",
+    "        \"vorticity\": {\n",
+    "            \"depth\": 9308,\n",
+    "            \"count_ops\": OrderedDict({'rz': 9512, 'sx': 5836, 'ecr': 2832, 'x': 471, 'barrier': 2}),\n",
+    "            \"runtime\": 1578.36\n",
+    "        }\n",
+    "    },\n",
+    "    3: {\n",
+    "        \"streamfunction\": {\n",
+    "            \"depth\": 255576,\n",
+    "            \"count_ops\": OrderedDict({'rz': 219544, 'sx': 133862, 'ecr': 68318, 'x': 8852, 'barrier': 2}),\n",
+    "            \"runtime\": 57095.12\n",
+    "        },\n",
+    "        \"vorticity\": {\n",
+    "            \"depth\": 45362,\n",
+    "            \"count_ops\": OrderedDict({'rz': 45968, 'sx': 29053, 'ecr': 13581, 'x': 2086, 'barrier': 2}),\n",
+    "            \"runtime\": 7638.90\n",
+    "        }\n",
+    "    },\n",
+    "    4: {\n",
+    "        \"streamfunction\": {\n",
+    "            \"depth\": 349916,\n",
+    "            \"count_ops\": OrderedDict({'rz': 292137, 'sx': 178140, 'ecr': 87634, 'x': 9160, 'barrier': 2}),\n",
+    "            \"runtime\": 58533.06\n",
+    "        },\n",
+    "        \"vorticity\": {\n",
+    "            \"depth\": 172757,\n",
+    "            \"count_ops\": OrderedDict({'rz': 175264, 'sx': 109973, 'ecr': 51041, 'x': 7710, 'barrier': 2}),\n",
+    "            \"runtime\": 29482.80\n",
+    "        }\n",
+    "    },\n",
+    "    5: {\n",
+    "        \"streamfunction\": {\n",
+    "            \"depth\": 565249,\n",
+    "            \"count_ops\": OrderedDict({'rz': 491277, 'sx': 297570, 'ecr': 151408, 'x': 19869, 'barrier': 2}),\n",
+    "            \"runtime\": 96393.12\n",
+    "        },\n",
+    "        \"vorticity\": {\n",
+    "            \"depth\": 623641,\n",
+    "            \"count_ops\": OrderedDict({'rz': 685366, 'sx': 417118, 'ecr': 193727, 'x': 32071, 'barrier': 2}),\n",
+    "            \"runtime\": 103457.64\n",
+    "        }\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"../parallelization/data/twoCircuitResourceEstimation.pkl\", \"wb\") as f:\n",
+    "    pkl.dump(data, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    1: {\n",
+    "        \"streamfunction\": {\n",
+    "            \"depth\":\n",
+    "            \"count_ops\": \n",
+    "            \"runtime\": \n",
+    "        },\n",
+    "        \"vorticity\": {\n",
+    "            \"depth\": \n",
+    "            \"count_ops\": \n",
+    "            \"runtime\": \n",
+    "        }\n",
+    "    }"
    ]
   }
  ],
