--- a/oneCircuitLBMECRCounts.ipynb
+++ b/oneCircuitLBMECRCounts.ipynb
@@ -9,9 +9,9 @@
    "source": [
     "import numpy as np\n",
     "import qiskit as q\n",
-    "from qiskit import QuantumCircuit, QuantumRegister, AncillaRegister\n",
+    "from qiskit import QuantumCircuit, QuantumRegister, AncillaRegister, transpile\n",
     "from qiskit.quantum_info.operators import Operator\n",
-    "from qiskit.quantum_info import Statevector\n",
+    "from qiskit.quantum_info import Statevector, random_statevector\n",
     "from qiskit.visualization import array_to_latex\n",
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
@@ -20,7 +20,6 @@
     "from qiskit.circuit.library import Diagonal\n",
     "import qiskit.circuit.library as qlib\n",
     "%matplotlib inline\n",
-    "from qiskit import transpile\n",
     "\n",
     "from qiskit_aer import AerSimulator\n",
     "\n",
