convert txt data files into pkl

--- a/data/timingAnalysis.ipynb
+++ b/data/timingAnalysis.ipynb
@@ -190,21 +190,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = {\n",
+    "    1: {\n",
+    "        \"depth\":70992,\n",
+    "        \"count_ops\":OrderedDict({'rz': 63820, 'sx': 40084, 'ecr': 19340, 'x': 2514, 'barrier': 6}),\n",
+    "        \"runtime\":11922.06\n",
+    "    },\n",
+    "    2: {\n",
+    "        \"depth\":105304,\n",
+    "        \"count_ops\":OrderedDict({'rz': 101015, 'sx': 63731, 'ecr': 31583, 'x': 3715, 'barrier': 6}),\n",
+    "        \"runtime\":18003.72\n",
+    "    },\n",
+    "    3: {\n",
+    "        \"depth\":474197,\n",
+    "        \"count_ops\":OrderedDict({'rz': 459468, 'sx': 289015, 'ecr': 141189, 'x': 16384, 'barrier': 6}),\n",
+    "        \"runtime\":77876.94\n",
+    "    },\n",
+    "    4: {\n",
+    "        \"depth\":1268120,\n",
+    "        \"count_ops\":OrderedDict({'rz': 1354893, 'sx': 859234, 'ecr': 424214, 'x': 47917, 'barrier': 6}),\n",
+    "        \"runtime\":221209.08\n",
+    "    },\n",
+    "    5: {\n",
+    "        \"depth\":3883490,\n",
+    "        \"count_ops\":OrderedDict({'rz': 4061236, 'sx': 2585836, 'ecr': 1251404, 'x': 133512, 'barrier': 6}),\n",
+    "        \"runtime\":673897.56\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"oneCircuitEncodingCosts.pkl\", \"wb\") as f:\n",
+    "    pkl.dump(data, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "    1: {\n",
-    "        \"streamfunction\": {\n",
-    "            \"depth\":\n",
-    "            \"count_ops\": \n",
-    "            \"runtime\": \n",
-    "        },\n",
-    "        \"vorticity\": {\n",
-    "            \"depth\": \n",
-    "            \"count_ops\": \n",
-    "            \"runtime\": \n",
-    "        }\n",
+    "        \"depth\":\n",
+    "        \"count_ops\":\n",
+    "        \"runtime\":\n",
     "    }"
    ]
   }
