--- a/oneCircuitLBMEncodingCost.ipynb
+++ b/oneCircuitLBMEncodingCost.ipynb
@@ -476,43 +476,97 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5\n",
-      "15\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: divide by zero encountered in det\n",
-      "  r = _umath_linalg.det(a, signature=signature)\n",
-      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: invalid value encountered in det\n",
-      "  r = _umath_linalg.det(a, signature=signature)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "optimizing\n",
-      "running\n",
-      "scheduling\n"
+      "Iteration 0\n",
+      "1 depth: 1545\n",
+      "1 counts: OrderedDict({'rz': 1557, 'sx': 1124, 'ecr': 387, 'x': 17})\n",
+      "1 time: 244.26\n",
+      "\n",
+      "Iteration 1\n",
+      "1 depth: 1507\n",
+      "1 counts: OrderedDict({'rz': 1486, 'sx': 1098, 'ecr': 354, 'x': 10})\n",
+      "1 time: 236.52\n",
+      "\n",
+      "Iteration 2\n",
+      "1 depth: 1517\n",
+      "1 counts: OrderedDict({'rz': 1659, 'sx': 1176, 'ecr': 412, 'x': 15})\n",
+      "1 time: 243.24\n",
+      "\n",
+      "Iteration 3\n",
+      "1 depth: 1498\n",
+      "1 counts: OrderedDict({'rz': 1538, 'sx': 1119, 'ecr': 353, 'x': 3})\n",
+      "1 time: 233.64000000000001\n",
+      "\n",
+      "Iteration 4\n",
+      "1 depth: 1510\n",
+      "1 counts: OrderedDict({'rz': 1550, 'sx': 1120, 'ecr': 353, 'x': 5})\n",
+      "1 time: 233.88\n",
+      "\n",
+      "Iteration 0\n",
+      "2 depth: 6941\n",
+      "2 counts: OrderedDict({'rz': 7574, 'sx': 4626, 'ecr': 2024, 'x': 316})\n",
+      "2 time: 1125.6000000000001\n",
+      "\n",
+      "Iteration 1\n",
+      "2 depth: 6349\n",
+      "2 counts: OrderedDict({'rz': 7106, 'sx': 5026, 'ecr': 1800, 'x': 99})\n",
+      "2 time: 1032.8400000000001\n",
+      "\n",
+      "Iteration 2\n",
+      "2 depth: 6958\n",
+      "2 counts: OrderedDict({'rz': 7032, 'sx': 4274, 'ecr': 1989, 'x': 407})\n",
+      "2 time: 1150.02\n",
+      "\n",
+      "Iteration 3\n",
+      "2 depth: 6754\n",
+      "2 counts: OrderedDict({'rz': 6429, 'sx': 3739, 'ecr': 1726, 'x': 344})\n",
+      "2 time: 1090.6200000000001\n",
+      "\n",
+      "Iteration 4\n",
+      "2 depth: 6228\n",
+      "2 counts: OrderedDict({'rz': 6439, 'sx': 4713, 'ecr': 1524, 'x': 54})\n",
+      "2 time: 976.74\n",
+      "\n",
+      "Iteration 0\n",
+      "3 depth: 26483\n",
+      "3 counts: OrderedDict({'rz': 28412, 'sx': 20062, 'ecr': 7040, 'x': 366})\n",
+      "3 time: 4192.5\n",
+      "\n",
+      "Iteration 1\n",
+      "3 depth: 26383\n",
+      "3 counts: OrderedDict({'rz': 27848, 'sx': 16454, 'ecr': 7646, 'x': 1399})\n",
+      "3 time: 4279.139999999999\n",
+      "\n",
+      "Iteration 2\n",
+      "3 depth: 25622\n",
+      "3 counts: OrderedDict({'rz': 25407, 'sx': 15152, 'ecr': 6841, 'x': 1375})\n",
+      "3 time: 4029.24\n",
+      "\n",
+      "Iteration 3\n",
+      "3 depth: 25794\n",
+      "3 counts: OrderedDict({'rz': 27277, 'sx': 19746, 'ecr': 6496, 'x': 170})\n",
+      "3 time: 4026.9600000000005\n",
+      "\n",
+      "Iteration 4\n",
+      "3 depth: 26081\n",
+      "3 counts: OrderedDict({'rz': 26230, 'sx': 15586, 'ecr': 7010, 'x': 1377})\n",
+      "3 time: 4092.060000000001\n",
+      "\n",
+      "Iteration 0\n",
+      "4 depth: 111547\n",
+      "4 counts: OrderedDict({'rz': 121092, 'sx': 74836, 'ecr': 28844, 'x': 3150})\n",
+      "4 time: 16392.48\n",
+      "\n",
+      "Iteration 1\n"
      ]
     }
    ],
    "source": [
-    "min = 5\n",
+    "min = 1\n",
     "max = 5\n",
     "\n",
-    "iter = 4\n",
+    "iter = 5\n",
     "\n",
     "outpath = \"data/encodingCost/oneCircuitEncodingCost\"\n",
-    "\n",
-    "data = {\n",
-    "    \"depth\":[],\n",
-    "    \"count_ops\":[],\n",
-    "    \"runtime\":[]\n",
-    "}\n",
     "\n",
     "for i in range(min, max + 1):\n",
     "    data = {\n",
